# simple-finance

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  dca_test.py  docker-compose.yml  pyproject.toml
.cursor/rules/: vnstock.mdc
.cursor/skills/vnstock-env-setup/: SKILL.md
alembic/: env.py
alembic/versions/: 20260709_0001_create_backtest_runs.py
app/: __init__.py  main.py
app/api/routes/: backtest.py  market.py
app/api/schemas/: backtest.py  market.py
app/core/: config.py  db.py
app/models/: __init__.py  backtest_run.py
app/services/: backtest_service.py
app/services/dca/: __init__.py  data.py  metrics.py  optimize.py  plots.py  report.py  scheduled.py  strategy.py
app/services/market_data/: __init__.py  base.py  common.py  factory.py  http_provider.py  vnstock_client.py  vnstock_provider.py  yfinance_client.py  yfinance_provider.py
app/services/signals/: __init__.py  ma_crossover.py  report.py
docs/superpowers/plans/: 2026-07-13-market-data-common.md  2026-07-15-scheduled-dca.md  2026-07-16-ma-crossover.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  nuxt.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/app/composables/: useApi.ts  (+5 more)
frontend/docs/: state-and-data-fetching.md
frontend/test/: stubs.ts
tests/: test_backtest_report.py  test_backtest_request.py  test_ma_crossover.py  test_market_data_factory.py  test_market_ticker_search.py  test_scheduled_dca.py  test_signal_report.py  test_vnstock_api_key.py  test_vnstock_client.py  test_yfinance_client_tz.py
(+34 files in other folders)
